# nonWare

./: .env.example  .gitignore  .python-version  README.md  cors-json-file.json  docker-compose.yaml
.github/workflows/: deploy-backend.yml  deploy-web.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/api/: router.py
backend/apps/blog/: api.py  models.py
backend/apps/blog/migrations/: 0001_initial.py
backend/apps/core/: admin.py  api.py  models.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/leads/: admin.py  api.py  models.py
backend/apps/leads/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
web/: Dockerfile
web/app/: page.tsx
web/app/api/health/: route.ts
